Remove deprecated flag